--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
   "env": {
     "MONGODB_URI": "mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true",
     "JWT_SECRET": "your-super-secret-jwt-key-minimum-32-characters-long",
-    "NEXT_PUBLIC_API_URL": "/api"
+    "NEXT_PUBLIC_API_URL": "https://techhouse-kohl.vercel.app/api"
   }
 }
