--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "MONGODB_URI": "mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true",
-    "JWT_SECRET": "your-super-secret-jwt-key-minimum-32-characters-long",
-    "NEXT_PUBLIC_API_URL": "https://techhouse-kohl.vercel.app/api"
-  }
+  "regions": ["iad1"]
 }
